--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^4.0.2",
     "postcss-custom-properties": "3.0.1",
     "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-docgen": "^1.2.0",
     "react-tools": "^0.12.2",
     "style-loader": "^0.8.3",
